# ascendc-homework

1_SoftMax/: .clangd  CMakeLists.txt  CMakePresets.json  SoftMax.json
1_SoftMax/AclNN/: CMakeLists.txt  run.sh
1_SoftMax/AclNN/inc/: data_utils.h
1_SoftMax/AclNN/inc/build_out/: CMakeCache.txt  CPackConfig.cmake  Makefile  cmake_install.cmake
1_SoftMax/AclNN/inc/build_out/acl/: Makefile  cmake_install.cmake
1_SoftMax/AclNN/inc/build_out/autogen/: aclnn_softmax_custom.cpp  aic-ascend310b-ops-info.ini  ascendc_all_ops.make  op_proto.h
1_SoftMax/AclNN/inc/build_out/op_host/: cmake_install.cmake
1_SoftMax/AclNN/inc/build_out/op_kernel/: Makefile  cmake_install.cmake
1_SoftMax/AclNN/output/: execute_softmax_aclnn
1_SoftMax/AclNN/scripts/: gen_softmax_data.py  verify_result.py
1_SoftMax/AclNN/src/: CMakeLists.txt  main.cpp  op_runner.cpp  operator_desc.cpp
1_SoftMax/acl/: CMakeLists.txt  aclnn_softmax.cpp  run_softmax_custom
1_SoftMax/build_out/: CMakeCache.txt  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
1_SoftMax/build_out/acl/: Makefile  run_softmax_custom
1_SoftMax/build_out/autogen/: aclnn_softmax_custom.cpp
1_SoftMax/build_out/op_host/: Makefile  cmake_install.cmake
1_SoftMax/build_out/op_kernel/: Makefile  cmake_install.cmake
1_SoftMax/op_host/: soft_max.cpp  soft_max_tiling.h
1_SoftMax/softmax/: CMakeLists.txt  CMakePresets.json
1_SoftMax/softmax/build_out/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
1_SoftMax/softmax/build_out/autogen/: aclnn_softmax_custom.cpp  aic-ascend310b-ops-info.ini
1_SoftMax/softmax/op_host/: soft_max.cpp  soft_max_tiling.h
1_SoftMax/softmax/op_kernel/: softmax_custom.cpp
1_SoftMax/test/: gen_data.py
2_ScatterElements/: ScatterElements.json  gen_scatter_elements_data.py  scatter_elements_main.cpp
2_ScatterElements/AclNN/: run.sh
2_ScatterElements/AclNN/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
2_ScatterElements/AclNN/output/: execute_scatter_elements_acl
2_ScatterElements/AclNN/scripts/: gen_scatter_elements_data.py  verify_result.py
2_ScatterElements/AclNN/src/: CMakeLists.txt  op_runner.cpp  operator_desc.cpp  scatter_elements_main.cpp
2_ScatterElements/ScatterElements/: CMakePresets.json
2_ScatterElements/ScatterElements/build_out/: CMakeCache.txt  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
2_ScatterElements/ScatterElements/op_host/: scatter_elements.cpp  scatter_elements_tiling.h
2_ScatterElements/build_out/: CPackConfig.cmake  install_manifest.txt
2_ScatterElements/build_out/op_kernel/: Makefile
3_LogSumExp/: CMakePresets.json  LogSumExp.json  log_sum_exp_main.cpp
3_LogSumExp/AclNN/: run.sh
3_LogSumExp/AclNN/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
3_LogSumExp/AclNN/inc/: common.h
3_LogSumExp/AclNN/output/: execute_log_sum_exp_acl
3_LogSumExp/AclNN/script/: gen_logsumexp_data.py  verify_result.py
3_LogSumExp/AclNN/src/: CMakeLists.txt  log_sum_exp_main.cpp  op_runner.cpp  operator_desc.cpp
3_LogSumExp/LogSumExp/build_out/: cmake_install.cmake  install_manifest.txt
3_LogSumExp/LogSumExp/op_host/: log_sum_exp_tiling.h
3_LogSumExp/LogSumExp/op_kernel/: log_sum_exp.cpp
3_LogSumExp/build_out/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
3_LogSumExp/build_out/autogen/: aic-ascend310b-ops-info.ini  ascendc_all_ops.make
3_LogSumExp/build_out/op_host/: Makefile
3_LogSumExp/build_out/op_kernel/: Makefile  cmake_install.cmake
3_LogSumExp/build_out/scripts/: install.sh
3_LogSumExp/op_host/: log_sum_exp.cpp
Ascend_S3-main/: README.md
Ascend_S3-main/01Softmax/op_host/: softmax.cpp  softmax_tiling.h
Ascend_S3-main/01Softmax/op_kernel/: softmax.cpp
Ascend_S3-main/02Div/: Div.json
Ascend_S3-main/02Div/.ipynb_checkpoints/: CMakePresets-checkpoint.json
Ascend_S3-main/02Div/op_host/: div.cpp  div_tiling.h
Ascend_S3-main/02Div/op_kernel/: div.cpp
Ascend_S3-main/03NotEqual/op_host/: not_equal.cpp  not_equal_tiling.h
Ascend_S3-main/03NotEqual/op_kernel/: not_equal.cpp
Ascend_S3-main/04Asinh/: Asinh.json  CMakePresets.json
Ascend_S3-main/04Asinh/op_host/: asinh.cpp  asinh_tiling.h
Ascend_S3-main/04Asinh/op_kernel/: asinh.cpp
Ascend_S3-main/05AsinhGrad/: AsinhGrad.json
Ascend_S3-main/05AsinhGrad/.ipynb_checkpoints/: CMakePresets-checkpoint.json
Ascend_S3-main/05AsinhGrad/op_host/: asinh_grad.cpp
Ascend_S3-main/06ScatterElements/: ScatterElements.json
Ascend_S3-main/06ScatterElements/op_host/: scatter_elements.cpp
Ascend_S3-main/06ScatterElements/op_kernel/: scatter_elements.cpp
Ascend_S3-main/08IsClose/.ipynb_checkpoints/: IsClose-checkpoint.json
Ascend_S3-main/08IsClose/op_host/: is_close.cpp
Ascend_S3-main/08IsClose/op_kernel/: is_close.cpp
Ascend_S3-main/09LogSumExp/: LogSumExp.json
Ascend_S3-main/09LogSumExp/op_host/: log_sum_exp.cpp
Ascend_S3-main/09LogSumExp/op_kernel/: log_sum_exp.cpp
Ascend_S3-main/10ReplicationPad2d/: ReplicationPad2d.json
Ascend_S3-main/10ReplicationPad2d/op_host/: replication_pad2d.cpp  replication_pad2d_tiling.h
Ascend_S3-main/10ReplicationPad2d/op_kernel/: replication_pad2d.cpp
LayerNormCustomSample/FrameworkLaunch/: README.md
LayerNormCustomSample/KernelLaunch/: README.md
LayerNormCustomSample/KernelLaunch/LayerNormKernelInvocation/: README.md
ScatterSubSample/FrameworkLaunch/: README.md
ScatterSubSample/KernelLaunch/: README.md
ScatterSubSample/KernelLaunch/ScatterSubKernelInvocation/: README.en.md  README.md
testcannbot/workspace/: README.md
testcannbot/workspace/.claude/: settings.local.json
testcannbot/workspace/docs/: softmax_ascendc_design.md  softmax_design.md
testcannbot/workspace/ops/: CMakeLists.txt  README.md  run_tests.sh  softmax_kernel.cpp  softmax_kernel.h  softmax_kernel.json  softmax_kernel_simple.cpp  softmax_kernel_simple.h  softmax_launcher.py  softmax_op.py  softmax_test.py  test_softmax_kernel.py
testcannbot/workspace/ops/ascendc_project/: CMakeLists.txt
testcannbot/workspace/ops/ascendc_project/src/host/: softmax_host.cpp
(+41 files in other folders)
